#---------------------------------- 0.25.1 -----------------------------------
[fixed] actually apply cron task fix :P
#---------------------------------- 0.25.0 -----------------------------------
[fixed] cron tasks will now save the results of their execution if requested,
    the argument to make this happen was mistakenly not passed onto the class
    that handles all of this. Thank you to github user
    https://github.com/jpassaro for the bug report and PR
[added] the ability to use a "prefix" to allow namespacing of rpqueue queues
    on the same Redis server. See `rpqueue.set_prefix()`
[added] the ability to instantiate a new rpqueue "state", for running parallel
    task execution systems with different prefixes, connections, etc. See
    `rpqueue.new_rpqueue(name, pfix=None)`
[added] warning-laced support for Python 3.x. The tests pass :P
#---------------------------------- 0.24.1 -----------------------------------
[added] the ability to call a single function after worker processes have been
    created. `import rom; rom.AFTER_FORK = fcn` - put this in the same module
    that imports all of your tasks (the module referred to in --module), and
    the function will be run in the newly forked child, just prior to starting
    worker threads
#---------------------------------- 0.24.0 -----------------------------------
[changed] forced a hard requirement on the Redis client to be 2.4.12 or later
    to remove the unnecessary thread/fork-safe pooling. The Redis client has
    been thread/fork safe since 2.4.12 (though got better multiple thread
    post-fork support in 2.9.0)
[changed] added rpqueue.set_redis_connection() for manually setting additional
    options (note that you can also just say `rpqueue.POOL = conn`)
#----------------------------------- 0.23 ------------------------------------
[added] --loglevel and --successlevel to set the minimum log level to print
    and the log level that "SUCCESS: Task completed:" messages are sent at