@@ -1,0 +1,27 @@
+.. RPQueue documentation master file, created by
+   sphinx-quickstart on Thu Mar 24 22:30:43 2016.
+   You can adapt this file completely to your liking, but it should at least
+   contain the root `toctree` directive.
+
+* :ref:`genindex`
+* :ref:`modindex`
+* :ref:`search`
+
+.. toctree::
+   :maxdepth: 2
+   
+   README
+
+* :any:`rpqueue`
+
+Documentation for version:
+
+.. include:: ./VERSION
+
+.. include:: ./README.rst
+
+Rpqueue module contents
+-----------------------
+
+.. automodule:: rpqueue
+   :members:
